<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_item"
            android:layout_width="125dp"
            android:layout_height="200dp"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ejemplo1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/volumen_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volumen" />

            <TextView
                android:id="@+id/autor_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autor" />


            <TextView
                android:id="@+id/publicacion_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publicacion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:text="@string/comprar"
                    android:textSize="13dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_action_carrito"
                    android:textSize="13dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="@string/sinopsis" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sinopsis_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="15dp" />
    </ScrollView>
</LinearLayout>